@@ -67,7 +67,7 @@ covariance=class=CovarianceMatrix dimension=1 implementation=class=MatrixImpleme
 Kolmogorov test for the generator, sample size=100 is accepted
 Kolmogorov test for the generator, sample size=1000 is accepted
 Point= class=Point name=Unnamed dimension=1 values=[1.5]
-ddf     =class=Point name=Unnamed dimension=1 values=[-0.114093]
+ddf     =class=Point name=Unnamed dimension=1 values=[-0.228185]
 log pdf=-1.07213
 pdf     =0.342278
 pdf (FD)=0.342278
