@@ -529,7 +529,9 @@ ot_pyinstallcheck_test (NormalGamma_std)
 ot_pyinstallcheck_test (OrdinalSumCopula_std)
 ot_pyinstallcheck_test (ParametrizedDistribution_std)
 ot_pyinstallcheck_test (Pareto_std)
+if (CMAKE_SIZEOF_VOID_P EQUAL 8)
 ot_pyinstallcheck_test (ParetoFactory_std)
+endif ()
 ot_pyinstallcheck_test (PlackettCopula_std)
 ot_pyinstallcheck_test (PlackettCopulaFactory_std)
 ot_pyinstallcheck_test (Poisson_std)
