@@ -30,6 +30,7 @@
  * #1661 (XMLH5StorageManager does not store IndicesCollection into HDF5 files)
  * #1662 (Operator() of a CovarianceModel with multidimensional output should yield object of type SquareMatrix)
  * #1680 (QuadraticBasisFactory multiplies cross products by 2)
+ * #1714 (The log-PDF of the Pareto is wrong)
 
 
 == 1.16 release (2020-11-16) == #release-1.16
